@startuml
class com.ko.mysingledairy.MainListFragment {
- FragmentListBinding binding
- DiaryAdapter adapter
- List<DiaryItem> diaryItems
- void loadDummyTextItems()
+ void selectTab(Boolean)
+ void onCreateView(void,LayoutInflater,void,ViewGroup?,void,Bundle?)
+ void null()
+ void onViewCreated(View,Bundle?)
+ void onDestroyView()
+ void onClick(View?)
}


class com.ko.mysingledairy.view.TextViewHolder {
+ void bind(DiaryItem)
}

class com.ko.mysingledairy.view.ImageViewHolder {
+ void bind(DiaryItem)
}

class com.ko.mysingledairy.view.DiaryAdapter$Companion {
+  TYPE_TEXT
+  TYPE_IMAGE
}

class com.ko.mysingledairy.view.DiaryAdapter {
+  itemList
+ void submitList(List<DiaryUiItem>)
+ Int getItemViewType(Int)
+ void onCreateViewHolder(void,ViewGroup,void,Int)
+ void null()
+ void onBindViewHolder(void,RecyclerView.ViewHolder,void,Int)
+ void null()
+ Int getItemCount()
}


class com.ko.mysingledairy.db.LocationWeatherEntity {
}
class com.ko.mysingledairy.view.DiaryViewModel {
}
class com.ko.mysingledairy.MyApplication {
+ void onCreate()
}

class com.ko.mysingledairy.db.null {
}
class com.ko.mysingledairy.db.null {
}
abstract class com.ko.mysingledairy.db.DiaryDatabase {
+ DiaryDao dairyDao()
}

class com.ko.mysingledairy.db.DiaryListEntity {
}
class com.ko.mysingledairy.MainService {
}
class com.ko.mysingledairy.view.DiaryUiItem$Text {
}
class com.ko.mysingledairy.view.DiaryUiItem$Image {
}
class com.ko.mysingledairy.view.DiaryUiItem {
}
class com.ko.mysingledairy.MainActivity {
- ActivityMainBinding binding
+ void onCreate(Bundle?)
+ void onDestroy()
+ Boolean onCreateOptionsMenu(Menu?)
+ Boolean onOptionsItemSelected(MenuItem)
}


class com.ko.mysingledairy.EditFragment {
- FragmentEditBinding binding
+ void onCreateView(void,LayoutInflater,void,ViewGroup?,void,Bundle?)
+ void null()
+ void onViewCreated(View,Bundle?)
+ void onDestroyView()
+ void onClick(View?)
}


interface com.ko.mysingledairy.db.DiaryDao {
}
class com.ko.mysingledairy.view.DiaryItem {
}


androidx.fragment.app.Fragment <|-- com.ko.mysingledairy.MainListFragment
com.ko.mysingledairy.OnClickListener <|.. com.ko.mysingledairy.MainListFragment
com.ko.mysingledairy.view.ViewHolder <|-- com.ko.mysingledairy.view.TextViewHolder
com.ko.mysingledairy.view.ViewHolder <|-- com.ko.mysingledairy.view.ImageViewHolder
com.ko.mysingledairy.view.DiaryAdapter +.. com.ko.mysingledairy.view.DiaryAdapter$Companion
com.ko.mysingledairy.view.Adapter <|-- com.ko.mysingledairy.view.DiaryAdapter
android.app.Application <|-- com.ko.mysingledairy.MyApplication
com.ko.mysingledairy.view.DiaryUiItem +.. com.ko.mysingledairy.view.DiaryUiItem$Text
com.ko.mysingledairy.view.DiaryUiItem <|-- com.ko.mysingledairy.view.DiaryUiItem$Text
com.ko.mysingledairy.view.DiaryUiItem +.. com.ko.mysingledairy.view.DiaryUiItem$Image
com.ko.mysingledairy.view.DiaryUiItem <|-- com.ko.mysingledairy.view.DiaryUiItem$Image
androidx.appcompat.app.AppCompatActivity <|-- com.ko.mysingledairy.MainActivity
androidx.fragment.app.Fragment <|-- com.ko.mysingledairy.EditFragment
com.ko.mysingledairy.OnClickListener <|.. com.ko.mysingledairy.EditFragment
@enduml